[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Plugins"
version = "1.6.2"
description = "Create plugins for your Flask application"
readme = "README.md"
license = {text = "BSD"}
authors = [
    {name = "Peter Justin", email = "peter.justin@outlook.com"}
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0",
    "MarkupSafe>=2.0",
    "Werkzeug>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "Flask",
]
dev = [
    "pytest",
    "coverage",
    "Flask",
    "coveralls",
    "build",
]

[tool.setuptools]
packages = ["flask_plugins"]
include-package-data = true
zip-safe = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]
